# minimamba

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  requirements_dev.txt
artificonfig/: .flake8  .gitchangelog.rc  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
artificonfig/artificonfig/: __init__.py  __main__.py
artificonfig/artificonfig/cli/: __init__.py
artificonfig/artificonfig/commands/: test.py
artificonfig/artificonfig/configs/: models.py
artificonfig/artificonfig/core/: models.py  reader.py  utils.py  writer.py
artificonfig/artificonfig/test/: advanced_tool.py  tool.py
artificonfig/artificonfig/utils/: dynamic_importer.py  global_context.py
artificonfig/configs/: test.json
artificonfig/configs/tools/: advanced-tool.json  tool.json
artificonfig/docs/: .gitignore  api.rst  conf.py  index.rst
artificonfig/utils/: autodocs.py  initialize.py  release.py  rename.py  requirement.py  version.py
configmanager/: __init__.py  __main__.py
configmanager/cli/: __init__.py  test.py
configmanager/commands/: test.py
configmanager/configs/: models.py
configmanager/core/: constants.py  models.py  reader.py  utils.py  writer.py
configmanager/docs/: Makefile  api.rst  conf.py  index.rst
configmanager/test/: advanced_tool.py  tool.py
configmanager/tests/: example_test.py
configmanager/utils/: exceptions.py  global_context.py  logging.py  singleton.py
configs/: global-config-debug.json  global-config.json
configs/commands/: generate.json  train.json
configs/datasets/: train-config.json  val-config.json
configs/models/: mini-mamba-config.json
docs/: index.md  tutorials.md
docs/tutorials/: new-command.md  project-setup.md
docs/tutorials/new-command/: creating-command.md  extending-command.md
minimamba/: __main__.py
minimamba/commands/: __init__.py  generate.py  train.py
minimamba/configs/: models.py
minimamba/data/: dataset.py
minimamba/models/: mini_mamba.py  nn_model.py
minimamba/models/utils/: rmsnorm.py
minimamba/utils/: exceptions.py  global_context.py  logging.py
tests/: imports_test.py
utils/: initialize.py  input_checks.py  release.py  rename.py  tree.py  version.py
