[build-system]
requires = ["setuptools==68.2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "artificonfig"
version = "0.1.5a"
description = "An Artificialy SA project"
readme = "README.md"
authors = [
    {name="Artificialy SA", email="info@artificialy.com"}
]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["python", "machine-learning"]
dynamic = ["dependencies", "optional-dependencies"]
requires-python = ">=3.9, <3.12"
license = {file = "LICENSE"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements_dev.txt"] }}

[project.scripts]
python-template = "artificonfig.__main__:main"

[project.urls]
Home-page = "https://www.artificialy.com"
Documentation = "https://www.artificialy.com"
Changelog = "https://www.artificialy.com"

[tool.setuptools.packages.find]
where = ["."]


[tool.black]
line-length = 90
target-version = ['py37', 'py38']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = 'black'
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 90
